--- a/env.example
+++ b/env.example
@@ -1,15 +1,9 @@
-# Telegram Bot Configuration
-BOT_TOKEN=your_telegram_bot_token_here
-ADMIN_USER_IDS=123456789,987654321
 
-# Database Configuration (Railway Postgres)
-DATABASE_URL=postgresql://username:password@host:port/database
-
-# Tatum API Configuration
-TATUM_API_KEY=your_tatum_api_key_here
+BOT_TOKEN=8380298242:AAGy0VQPLPS1wg2kd69vvsQHVd-i6C1ExEo
+ADMIN_USER_IDS=5950741458
+BITQUERY_API_KEY=your_bitquery_api_key_here
+TATUM_API_KEY=t-6893467fa4dc505bd5e22a7d-facea77527ef4ca8a90218e2
 TOKEN_CONTRACT_ADDRESS=your_token_contract_address_here
-BLOCKCHAIN_NETWORK=ethereum-sepolia  # or mainnet, polygon, etc.
-
-# Application Settings
+BLOCKCHAIN_NETWORK=solana-mainnet
 PORT=8000
 ENVIRONMENT=production
