--- a/env.example
+++ b/env.example
@@ -1,9 +1,14 @@
+# Telegram Bot Configuration
+BOT_TOKEN=your_telegram_bot_token_here
 
-BOT_TOKEN=8380298242:AAGy0VQPLPS1wg2kd69vvsQHVd-i6C1ExEo
-ADMIN_USER_IDS=5950741458
-BITQUERY_API_KEY=your_bitquery_api_key_here
-TATUM_API_KEY=t-6893467fa4dc505bd5e22a7d-facea77527ef4ca8a90218e2
-TOKEN_CONTRACT_ADDRESS=your_token_contract_address_here
-BLOCKCHAIN_NETWORK=solana-mainnet
-PORT=8000
-ENVIRONMENT=production
+# Database Configuration (Railway PostgreSQL)
+DATABASE_URL=postgresql://username:password@host:port/database_name
+
+# SOLSCAN Pro API Configuration
+SOLSCAN_API_KEY=your_solscan_pro_api_key_here
+
+# Admin Configuration (comma-separated Telegram user IDs)
+ADMIN_USER_IDS=123456789,987654321
+
+# Minimum USD Threshold (optional, defaults to 0)
+MINIMUM_USD_THRESHOLD=100
