--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-aiogram==3.4.1
-asyncpg==0.29.0
-python-dotenv==1.0.0
-httpx==0.26.0
-uvloop==0.19.0
+python-telegram-bot==20.7
 psycopg2-binary==2.9.9
-sqlalchemy==2.0.25
-alembic==1.13.1
-python-dateutil==2.8.2
+requests==2.31.0
+python-dotenv==1.0.0
+schedule==1.2.0
+asyncio==3.4.3
 aiohttp==3.9.1
+pandas==2.1.4
+numpy==1.24.3
+base58==2.1.1
+psutil==5.9.6
