--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-python-telegram-bot==20.7
-psycopg2-binary==2.9.9
-requests==2.31.0
-python-dotenv==1.0.0
-schedule==1.2.0
-asyncio==3.4.3
-aiohttp==3.9.1
-pandas==2.1.4
-numpy==1.24.3
-base58==2.1.1
-psutil==5.9.6
+python-telegram-bot>=20.0,<21.0
+psycopg2-binary>=2.9.0
+requests>=2.28.0
+python-dotenv>=1.0.0
+schedule>=1.2.0
+aiohttp>=3.8.0
+psutil>=5.9.0
+base58>=2.0.0
