feat: switch to Helius for token holders; update config, snapshot, healthcheck, bot; add Helius client

--- a/env.example
+++ b/env.example
@@ -4,8 +4,8 @@ BOT_TOKEN=your_telegram_bot_token_here
 # Database Configuration (Railway PostgreSQL)
 DATABASE_URL=postgresql://username:password@host:port/database_name
 
-# SOLSCAN Pro API Configuration
-SOLSCAN_API_KEY=your_solscan_pro_api_key_here
+# Helius API Configuration
+HELIUS_API_KEY=your_helius_api_key_here
 
 # Admin Configuration (comma-separated Telegram user IDs)
 ADMIN_USER_IDS=123456789,987654321
